--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <title>All in One</title>
-    
+    <title>Turk and Yamz</title>
+    <head>
+      <h1>
+        Turk and Yamz
+      </h1>
+    </head>
   </body>
 </html>
