--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="stylesheet" href="style.css"/>
     <title>Turk and Yamz</title>
     <head>
       <h1>
         Turk and Yamz
       </h1>
-    </head>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="shortcuts.html">Shortcuts</a>
+    </div>
   </body>
 </html>
