--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
     <link rel="stylesheet" href="style.css"/>
     <title>Turk and Yamz</title>
     <head>
@@ -12,8 +12,10 @@
       </h1>
   </head>
   <body>
-    <div class="navbar">
-      <a href="shortcuts.html">Shortcuts</a>
-    </div>
+    <div class="topnav">
+  <a href="#home" onclick">Shortcuts</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+</div>
   </body>
 </html>
