👮⛄️ Checkpoint ./index.html:11068696/23:31343558/9 ./shortcuts.html:31343558/297 ./shortcuts.js:31343558/9887 ./style.css:11068696/133:31343558/92 ./shortcuts.css:31343558/517

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="topnav">
-  <a href="#home" onclick">Shortcuts</a>
+  <a href="shortcuts.html">Shortcuts</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
 </div>
