--- a/shortcuts.html
+++ b/shortcuts.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="shortcuts.css"/>
     <title>Keyboard Shortcuts</title>
     <head>
       <h1>
@@ -14,7 +14,13 @@
   <body>
     <div class="topnav">
       <button onclick="macFunction()">
-        Macbooks
+        Macbook
+      </button>
+      <button onclick="chromeFunction()">
+        Chromebook
+      </button>
+        <button onclick="windowsFunction()">
+        Windows
       </button>
     </div>
   </body>
