🍨⛱ Checkpoint ./shortcuts.css:31343558/458 ./style.css:11068696/114:31343558/59 ./shortcuts.html:31343558/1276

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -23,5 +23,14 @@
         Windows
       </button>
     </div>
+    <div id="mac">
+        weeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
+    </div>
+    <div id="chrome">
+        nig
+    </div>
+    <div id="windows">
+        booooooooooooooooooooooooo
+    </div>
   </body>
 </html>
