--- a/blocksi.html
+++ b/blocksi.html
@@ -4,16 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="blocksi.css"/>
     <title>Turk and Yamz</title>
   </head>
-  <h1>
-    Turk and Yamz
-  </h1>
   <body>
-    <div class="topnav">
-  <a href="shortcuts.html">Shortcuts</a>
-  <a href="blocksi.html">Getting Through Blocksi</a>
-</div>
+
   </body>
 </html>
