--- a/blocksi.html
+++ b/blocksi.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="blocksi.css"/>
     <title>Turk and Yamz</title>
     <h1>
-    Turk and Yamz
+    Getting Through Blocksi
     </h1>
   </head>
   <body>
-
+    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
   </body>
 </html>
