💵⛹ Checkpoint ./blocksi.css:11068696/1757 ./blocksi.html:11068696/1 ./blocksi/the_sphero_EDU-way:11068696/1542

--- a/blocksi/blocksi.html
+++ b/blocksi/blocksi.html
@@ -19,7 +19,7 @@
         Hello there! Welcome to the Anti-Blocksi community! Everyone that goes to this site has one thing in common. We all absolutely hate blocksi. 
         Blocksi is just horrible and restricts us from having even a little bit of fun. 
         I have made this site for people who want to play games freely and have fun at school during boring times. 
-        This does require you to have another window open but it will be worth it!(Site gets updated every week) Below are some ways to do it:
+        This does require you to have another window open but it will be worth it!(Site gets updated every week). Below are some ways to do it:
     </p> 
     <h3>
         Enjoy!                                                                     
