🏗🕹 Checkpoint ./The Sphero EDU Way.html:11068696/69

--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -8,7 +8,9 @@
     <title>Anti-Blocksi</title>
     <link rel="stylesheet" href="blocksi.css">
     <link rel="stylesheet" href="The Sphero EDU Way.html">
-  
+  <h1>
+    The Sphero EDU Way
+  </h1>
 </head>
 <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
