🙇🏆 Checkpoint ./style.css:31343558/111 ./shortcuts.css:31343558/31 ./index.html:31343558/9

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </h1>
   <body>
     <div class="topnav">
-      <a href="shortcuts.html">Shortcuts</a>
+      <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Through Blocksi</a>
     </div>
   </body>
