👦🍈 Checkpoint ./shortcuts.html:31343558/554 ./shortcuts.css:31343558/372

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -10,9 +10,7 @@
   </head>
   <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
-    <h1>
-      Keyboard Shortcuts
-    </h1>
+    <h1>Keyboard Shortcuts</h1>
     <div class="topnav">
       <button onclick="macFunction()">
         Macbook
@@ -24,10 +22,12 @@
         Windows
       </button>
     </div>
+    <br>
     <div id="macParagraph">
         
     </div>
     <div id="chromeParagraph">
+      <h2>Simple Text Shortcuts</h2>
       <table>
         <tr>
           <th>Outcome</th>
@@ -35,7 +35,19 @@
         </tr>
         <tr>
           <td>Copy</td>
-          <td></td>
+          <td>ctrl + c</td>
+        </tr>
+        <tr>
+          <td>Paste</td>
+          <td>ctrl + v</td>
+        </tr>
+        <tr>
+          <td>Undo</td>
+          <td>ctrl + z</td>
+        </tr>
+        <tr>
+          <td>Redo</td>
+          <td>ctrl + y</td>
         </tr>
       </table>
     </div>
