🐂⚡️ Checkpoint ./shortcuts.css:31343558/197 ./shortcuts.html:31343558/526

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -50,6 +50,30 @@
           <td>ctrl + y</td>
         </tr>
       </table>
+      <h2>Math Characters</h2>
+      <table>
+        <tr>
+          <th>Outcome</th>
+          <th>Keyboard</th>
+        </tr>
+        <tr>
+          <td>Copy</td>
+          <td>ctrl + c</td>
+        </tr>
+        <tr>
+          <td>Paste</td>
+          <td>ctrl + v</td>
+        </tr>
+        <tr>
+          <td>Undo</td>
+          <td>ctrl + z</td>
+        </tr>
+        <tr>
+          <td>Redo</td>
+          <td>ctrl + y</td>
+        </tr>
+      </table>
+      
     </div>
     <div id="windowsParagraph">
         
