🌈🍳 Checkpoint ./shortcuts.html:31343558/1087

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -57,20 +57,47 @@
           <th>Keyboard</th>
         </tr>
         <tr>
-          <td>Copy</td>
-          <td>ctrl + c</td>
+          <td>Multiplication Symbol (×)</td>
+          <td>alt + =</td>
         </tr>
         <tr>
-          <td>Paste</td>
-          <td>ctrl + v</td>
+          <td>Division Symbol (÷)</td>
+          <td>alt + shift + =</td>
         </tr>
         <tr>
-          <td>Undo</td>
-          <td>ctrl + z</td>
+          <td>1/4 Fraction (¼)</td>
+          <td>alt + 6</td>
         </tr>
         <tr>
-          <td>Redo</td>
-          <td>ctrl + y</td>
+          <td>1/2 Fraction (½)</td>
+          <td>alt + 7</td>
+        </tr>
+      </table>
+      <h2>Foreign Characters</h2>
+      <table>
+        <tr>
+          <th>Outcome</th>
+          <th>Keyboard</th>
+        </tr>
+        <tr>
+          <td>Acute A (á)</td>
+          <td>alt + A</td>
+        </tr>
+        <tr>
+          <td>Acute E (é)</td>
+          <td>alt + E</td>
+        </tr>
+        <tr>
+          <td>Acute I (í)</td>
+          <td>alt + I</td>
+        </tr>
+        <tr>
+          <td>Acute O (ó)</td>
+          <td>alt + 7</td>
+        </tr>
+        <tr>
+          <td>Acute U (ú)</td>
+          <td>alt + 7</td>
         </tr>
       </table>
       
