🏈👼 Checkpoint ./shortcuts.html:31343558/4

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -93,11 +93,11 @@
         </tr>
         <tr>
           <td>Acute O (ó)</td>
-          <td>alt + 7</td>
+          <td>alt + O</td>
         </tr>
         <tr>
           <td>Acute U (ú)</td>
-          <td>alt + 7</td>
+          <td>alt + U</td>
         </tr>
       </table>
       
