--- a/shortcuts.html
+++ b/shortcuts.html
@@ -24,7 +24,29 @@
     </div>
     <br>
     <div id="macParagraph">
-        
+      <h2>Simple Text Shortcuts</h2>
+      <table>
+        <tr>
+          <th>Outcome</th>
+          <th>Keyboard</th>
+        </tr>
+        <tr>
+          <td>Copy</td>
+          <td>Command + c</td>
+        </tr>
+        <tr>
+          <td>Paste</td>
+          <td>Command + v</td>
+        </tr>
+        <tr>
+          <td>Undo</td>
+          <td>Command + z</td>
+        </tr>
+        <tr>
+          <td>Redo</td>
+          <td>C + y</td>
+        </tr>
+      </table>  
     </div>
     <div id="chromeParagraph">
       <h2>Simple Text Shortcuts</h2>
