--- a/blocksi.html
+++ b/blocksi.html
@@ -35,6 +35,12 @@
           <img class="img-overdrive" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(8).jpeg?v=1639232192290">
         </td>
       </tr>
+      <tr>
+        <td>
+          <button class="btn">The Spectral Analysis Way</button>
+          <img class="img-spectralAnalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(9).jpeg?v=1639232912542">
+        </td>
+      </tr>
     </table>
 </body>
 </html>
