👫🌆 Checkpoint ./shortcuts.html:11068696/36:31343558/705 ./blocksi.html:11068696/18 ./blocksi.css:11068696/99:31343558/12

--- a/blocksi.html
+++ b/blocksi.html
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <button class="btn">The Spectral Analysis Way</button>
-          <img class="img-spectralAnalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(9).jpeg?v=1639232912542">
+          <img class="img-spectralanalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(9).jpeg?v=1639232912542">
         </td>
       </tr>
     </table>
