🍇👕 Checkpoint ./blocksi.css:11068696/35:31343558/67 ./blocksi.html:11068696/6:31343558/94 ./The Sphero EDU Way.html:11068696/122:31343558/1407 ./Overdrive.html:31343558/714 ./ways.css:11068696/74:31343558/2632

--- a/Overdrive.html
+++ b/Overdrive.html
@@ -8,13 +8,13 @@
     <title>Anti-Blocksi</title>
     <link rel="stylesheet" href="ways.css">
   <h1>
-    The Sphero EDU Way
+    The Overdrive Way
   </h1>
 </head>
 <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
     <p>
-      Step 1: Download Sphero EDU
+      
     </p>
 </body>
 </html>
