🕹🎆 Checkpoint ./The Sphero EDU Way.html:11068696/308 ./ways.css:11068696/573

--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -12,9 +12,10 @@
   </h1>
 </head>
 <body>
+    <button class="btn-2" onclick="window.open('https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en','_blank')">Click Here to Download</button>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
     <p>
-      Step 1: Download Sphero EDU
+      Step 1: Download Sphero EDU and add it to Chrome
     </p>
 </body>
 </html>
