--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -17,5 +17,6 @@
     <p>
       Step 1: Download Sphero EDU and add it to Chrome
     </p>
+  <img class="img-step1" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fseesh.png?v=1639248734070" alt="step1">
 </body>
 </html>
