💷🏀 Checkpoint ./ways.css:11068696/60 ./.glitch-assets:31343558/474 ./blocksi.html:31343558/209 ./blocksi.css:31343558/6 ./The Sphero EDU Way.html:11068696/211:31343558/51

--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -15,7 +15,16 @@
     <button class="btn-2" onclick="window.open('https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en','_blank')">Click Here to Download</button>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
     <p>
-      Step 1: Download Sphero EDU and add it to Chrome
+      Step 1: Download <a>Sphero EDUI</a> and add it to Chrome and Open it
+    </p>
+    <p>
+      Step 2: Click I am a Home user
+    </p>
+    <p>
+      Step 2: Click I am a Home user
+    </p>
+    <p>
+      Step 2: Click I am a Home user
     </p>
   <img class="img-step1" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fseesh.png?v=1639248734070" alt="step1">
 </body>
