--- a/blocksi.html
+++ b/blocksi.html
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <button class="btn-2">The Spectral Analysis Way</button>
-          <img class="img-spectralanalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(9).jpeg?v=1639232912542">
+          <img class="img-spectralanalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20152039.png?v=1639254063681">
         </td>
       </tr>
     </table>
