🕶🗽 Checkpoint ./The Sphero EDU Way.html:11068696/1200:31343558/337 ./ways.css:11068696/32:31343558/31 ./index.html:31343558/15 ./shortcuts.css:31343558/44 ./shortcuts.html:31343558/699

--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -12,19 +12,30 @@
   </h1>
 </head>
 <body>
-    <button class="btn-2" onclick="window.open('https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en','_blank')">Click Here to Download</button>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
     <p>
-      Step 1: Download <a>Sphero EDUI</a> and add it to Chrome and Open it
+      Step 1: Download <a href="https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en" target="_blank">Sphero EDU</a> and add it to Chrome and Open it
     </p>
     <p>
       Step 2: Click I am a Home user
     </p>
     <p>
-      Step 2: Click I am a Home user
+      Step 3: Click "Sign in with Google"
     </p>
     <p>
-      Step 2: Click I am a Home user
+      Step 4: Where it says "sign in", there is a blue colored text saying "Sphero EDU". Click on it and click on the email.
+    </p>
+    <p>
+      Step 5: Click on "Sign in" at the top right of the page
+    </p>
+    <p>
+      Step 6: Click on "Learn More" under the email adress box
+    </p>
+    <p>
+      Step 7: On the adress bar above, type in "*" and click on search on google
+    </p>
+    <p>
+      Step 8: Enjoy!
     </p>
   <img class="img-step1" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fseesh.png?v=1639248734070" alt="step1">
 </body>
