--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
-      <a href="blocksi.html">Getting Through Blocksi</a>
+      <a href="blocksi.html">Getting Past Blocksi</a>
     </div>
   </body>
 </html>
