🏯🌘 Checkpoint ./ways.css:11068696/135 ./shortcuts.html:31343558/211

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -73,6 +73,14 @@
           <td>Redo</td>
           <td>ctrl + y</td>
         </tr>
+        <tr>
+          <td>Print Full Screen</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Print Part Of Screen</td>
+          <td></td>
+        </tr>
       </table>
       
       <h2>Math Characters</h2>
