📉🍣 Checkpoint ./The Sphero EDU Way.html:11068696/21 ./.glitch-assets:31343558/931 ./shortcuts.html:31343558/190 ./ways.css:11068696/10 ./shortcuts.css:31343558/57

--- a/The Sphero EDU Way.html
+++ b/The Sphero EDU Way.html
@@ -17,7 +17,7 @@
       Step 1: Download <a href="https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en" target="_blank">Sphero EDU</a> and add it to Chrome and Open it
     </p>
     <p>
-      Step 2: Click I am a Home user
+      Step 2: Click on sign in and Click I am a Home user
     </p>
     <p>
       Step 3: Click "Sign in with Google"
