--- a/shortcuts.html
+++ b/shortcuts.html
@@ -50,7 +50,7 @@
     </div>
     <div id="chromeParagraph">
       
-      <h3>Disclaimer: You made need to use the U.S. International keyboard for some of the shortcuts</h3>
+      <h3>Disclaimer: You may need to use the U.S. International keyboard for some of the shortcuts</h3>
       <h2>Simple Text Shortcuts</h2>
       <table>
         <tr>
@@ -75,11 +75,11 @@
         </tr>
         <tr>
           <td>Print Full Screen</td>
-          <td></td>
+          <td>ctrl + <img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20155848.png?v=1639256337711"></td>
         </tr>
         <tr>
           <td>Print Part Of Screen</td>
-          <td></td>
+          <td>ctrl + shift + </td>
         </tr>
       </table>
       
