🍖🍩 Checkpoint ./shortcuts.html:31343558/125 ./shortcuts.css:31343558/12

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -79,7 +79,7 @@
         </tr>
         <tr>
           <td>Print Part Of Screen</td>
-          <td>ctrl + shift + </td>
+          <td>ctrl + shift + <img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20155848.png?v=1639256337711"></td>
         </tr>
       </table>
       
