🌃✂️ Checkpoint ./shortcuts.html:31343558/116

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -142,16 +142,16 @@
           <th>Keyboard</th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
+          <td>The Euro (€)</td>
+          <td>alt + 5</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
+          <td>Japanese Yen (¥)</td>
+          <td>alt + _</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
+          <td>English Pound (£)</td>
+          <td>alt + shift + 4</td>
         </tr>
         <tr>
           <td></td>
