📷👲 Checkpoint ./shortcuts.html:31343558/135 ./blocksi.css:31343558/9 ./index.html:31343558/45 ./ways.css:31343558/7 ./style.css:31343558/53

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
+      <a href="Informational Websites"
     </div>
   </body>
 </html>
