--- a/shortcuts.html
+++ b/shortcuts.html
@@ -115,23 +115,23 @@
         </tr>
         <tr>
           <td>Acute A (á)</td>
-          <td>alt + A</td>
+          <td>alt + a</td>
         </tr>
         <tr>
           <td>Acute E (é)</td>
-          <td>alt + E</td>
+          <td>alt + e</td>
         </tr>
         <tr>
           <td>Acute I (í)</td>
-          <td>alt + I</td>
+          <td>alt + i</td>
         </tr>
         <tr>
           <td>Acute O (ó)</td>
-          <td>alt + O</td>
+          <td>alt + o</td>
         </tr>
         <tr>
           <td>Acute U (ú)</td>
-          <td>alt + U</td>
+          <td>alt + u</td>
         </tr>
       </table>
       
@@ -154,12 +154,8 @@
           <td>alt + shift + 4</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
+          <td>American Cent (¢)</td>
+          <td>alt + shift + c</td>
         </tr>
       </table>
       
