--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
-      <a href="Informational Websites"
+      <a href="Informational Websites.html">Learn about...</a>
     </div>
   </body>
 </html>
