🎠🐓 Checkpoint ./Informational Websites.html:31343558/182 ./.glitch-assets:31343558/1309 ./Informational Websites.css:31343558/422

--- a/Informational Websites.html
+++ b/Informational Websites.html
@@ -18,6 +18,11 @@
   <table>
     <tr>
       <td>Paperfuge</td>
+      <td>Best Hockey players</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><button class="hockeyButton"></button></td>
     </tr>
   </table>
 </body>
