--- a/Informational Websites.html
+++ b/Informational Websites.html
@@ -21,8 +21,8 @@
       <td>Best Hockey players</td>
     </tr>
     <tr>
-      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%209.13.50%20PM.png?v=1639275342708" onclick="window.location.replace('https://the-paperfuge.glitch.me/')" target="_blank"</td>
-      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(10).jpeg?v=1639275326593" onclick="window.location.replace('https://best-hockey-players.glitch.me/')" target="_blank"></img></td>
+      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%209.13.50%20PM.png?v=1639275342708" onclick="window.location.replace('https://the-paperfuge.glitch.me/')"></td>
+      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(10).jpeg?v=1639275326593" onclick="window.location.replace('https://best-hockey-players.glitch.me/')"></td>
     </tr>
   </table>
 </body>
