🎬🗻 Checkpoint ./Informational Websites.html:11068696/77 ./index.html:11068696/9:31343558/922

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
-      <a href="Informational Websites.html">Learn about...</a>
+      <a href="Informational Websites.html">Learn more about...</a>
     </div>
   </body>
 </html>
