📡🌶 Checkpoint ./Overdrive.html:11068696/913 ./blocksi.html:11068696/48

--- a/Overdrive.html
+++ b/Overdrive.html
@@ -14,7 +14,19 @@
 <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
     <p>
-      
+      Step 1: Download Google Play(Skip this step if you already have it)
+    </p>
+    <p>
+      Step 2: Download Overdrive on the google play store and open it
+    </p>
+    <p>
+      Step 1: Download Google Play(Skip this step if you already have it)
+    </p>
+    <p>
+      Step 1: Download Google Play(Skip this step if you already have it)
+    </p>
+    <p>
+      Step 1: Download Google Play(Skip this step if you already have it)
     </p>
 </body>
 </html>
