--- a/blocksi.html
+++ b/blocksi.html
@@ -31,7 +31,7 @@
           <img class="img-sphero" src="https://cdn.glitch.me/a2039779-b916-4a79-8095-e5fdcbd18735%2Fsphero.jpeg?v=1639139308122" alt="Sphero EDU">
         </td>
         <td>
-          <button class="btn-2" onclick="window.location.href='Overdrive.html'">The Overdrive Way</button>
+          <button class="btn-2" onclick="window.location.href='Overdrive.html'">The Overdrive Way(Chromebook Only, Requires Play Store)</button>
           <img class="img-overdrive" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(8).jpeg?v=1639232192290">
         </td>
       </tr>
