🏫🌃 Checkpoint ./Overdrive.html:11068696/1150

--- a/Overdrive.html
+++ b/Overdrive.html
@@ -20,13 +20,22 @@
       Step 2: Download Overdrive on the google play store and open it
     </p>
     <p>
-      Step 1: Download Google Play(Skip this step if you already have it)
+      Step 3: Click "Sign Up"
     </p>
     <p>
-      Step 1: Download Google Play(Skip this step if you already have it)
+      Step 4: Scroll to the bottom and click "privacy policy"
     </p>
     <p>
-      Step 1: Download Google Play(Skip this step if you already have it)
+      Step 5: Scroll to the first set of bullet points and scroll down a bit further until you see the links
+    </p>
+    <p>
+      Step 6: There should be a link that says "https://analytics.google.com". Click on it and click learn more under the email address box
+    </p>
+    <p>
+      Step 7: Scroll up to the top and in the box, type in '*'. Then click "Search on google" on the blue button
+    </p>
+    <p>
+      Step 8: Enjoy!
     </p>
 </body>
 </html>
