👨⛴ Checkpoint ./shortcuts.html:11068696/120 ./blocksi.html:11068696/16 ./spectral analysis.html:11068696/2388

--- a/blocksi.html
+++ b/blocksi.html
@@ -27,7 +27,7 @@
     <table class="sphero">
       <tr>
         <td>
-          <button class="btn" onclick="window.location.href='The Sphero EDU Way.html'">The Sphero EDU Way</button>
+          <button class="btn" onclick="window.location.href='The Sphero EDU Way.html'">The Sphero EDU Way(Most Popular)</button>
           <img class="img-sphero" src="https://cdn.glitch.me/a2039779-b916-4a79-8095-e5fdcbd18735%2Fsphero.jpeg?v=1639139308122" alt="Sphero EDU">
         </td>
         <td>
