--- a/shortcuts.html
+++ b/shortcuts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
     <link rel="stylesheet" href="shortcuts.css"/>
     <script src="/shortcuts.js" defer></script>
     <title>Keyboard Shortcuts</title>
