💓💵 Checkpoint ./blocksi.html:11068696/152 ./spectral analysis.html:11068696/83 ./Informational Websites.html:11068696/52 ./Overdrive.html:11068696/49 ./The Sphero EDU Way.html:11068696/58 ./shortcuts.html:11068696/16

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
     <link rel="stylesheet" href="shortcuts.css"/>
     <script src="/shortcuts.js" defer></script>
-    <title>Keyboard Shortcuts</title>
+    <title>Turk and Yamz | Keyboard Shortcuts</title>
   </head>
   <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
