--- a/Overdrive.html
+++ b/Overdrive.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
-    <title>Anti-Blocksi</title>
+    <title>Turk and Yamz | The Overdrive Way</title>
     <link rel="stylesheet" href="ways.css">
   <h1>
     The Overdrive Way
