--- a/blocksi.html
+++ b/blocksi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
-    <title>Anti-Blocksi</title>
+    <title>Turk and Yamz | Anti-Blocksi</title>
     <link rel="stylesheet" href="blocksi.css">
     <link rel="stylesheet" href="The Sphero EDU Way.html">
   
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <td>
-          <button class="btn-2">The Spectral Analysis Way</button>
+          <button class="btn-2" onclick="window.location.href='spectral analysis.html'">The Spectral Analysis Way(Chromebook Only, Requires Play Store)</button>
           <img class="img-spectralanalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20152039.png?v=1639254063681">
         </td>
       </tr>
