👌🐔 Checkpoint ./spectral analysis.html:11068696/711

--- a/spectral analysis.html
+++ b/spectral analysis.html
@@ -13,5 +13,20 @@
 </head>
 <body>
     <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+  <p>
+    Step 1: Download the Google Play Store(Skip this step if you already have it)
+  </p>
+  <p>
+    Step 1: Download Vernier Spectral Analysis on the google play store
+  </p>
+  <p>
+    Step 1: Download the Google Play Store(Skip this step if you already have it)
+  </p>
+  <p>
+    Step 1: Download the Google Play Store(Skip this step if you already have it)
+  </p>
+  <p>
+    Step 1: Download the Google Play Store(Skip this step if you already have it)
+  </p>
 </body>
 </html>
