⛽️📯 Checkpoint ./spectral analysis.html:11068696/1553 ./shortcuts.html:11068696/75

--- a/spectral analysis.html
+++ b/spectral analysis.html
@@ -17,16 +17,28 @@
     Step 1: Download the Google Play Store(Skip this step if you already have it)
   </p>
   <p>
-    Step 1: Download Vernier Spectral Analysis on the google play store
+    Step 2: Download Vernier Spectral Analysis on the google play store and open it
   </p>
   <p>
-    Step 1: Download the Google Play Store(Skip this step if you already have it)
+    Step 3: Click Deny on the pop up and click away from the little pop up tab 
   </p>
   <p>
-    Step 1: Download the Google Play Store(Skip this step if you already have it)
+    Step 4: Click the 3 dots on the top right of the screen and click user manual
   </p>
   <p>
-    Step 1: Download the Google Play Store(Skip this step if you already have it)
+    Step 5: Scroll to the bottom of the page and to the footer. There is a youtube symbol on the right of the page. Click on that
+  </p>
+  <p>
+    Step 6: Click the 3 dots at the top right of the youtube page and select "sign in"
+  </p>
+  <p>
+    Step 7: Click "learn more" under the e-mail address box
+  </p>
+  <p>
+    Step 8: At the top of the page, type in "*" in the search bar and click on the "Search on google" button in blue
+  </p>
+  <p>
+    Step 9: Enjoy!
   </p>
 </body>
 </html>
