🍞🎑 Checkpoint ./shortcuts.html:11068696/18:31343558/53

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -147,7 +147,7 @@
         </tr>
         <tr>
           <td>Japanese Yen (¥)</td>
-          <td>Ctrl + Shift + u and then type in, "00A5" then click enter</td>
+          <td>alt + shift + u a</td>
         </tr>
         <tr>
           <td>English Pound (£)</td>
