🎱💘 Checkpoint ./shortcuts.html:11068696/4

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -143,7 +143,7 @@
         </tr>
         <tr>
           <td>The Euro (€)</td>
-          <td>alt + 5</td>
+          <td>alt</td>
         </tr>
         <tr>
           <td>Japanese Yen (¥)</td>
