🎌⏱ Checkpoint ./shortcuts.html:31343558/89 ./index.html:31343558/61 ./Unblocked Games.html:31343558/2441 ./ways.css:31343558/3 ./style.css:31343558/2 ./shortcuts.css:31343558/7 ./blocksi.html:31343558/23 ./blocksi.css:31343558/3 ./Informational Websites.css:31343558/3 ./Unblocked Games.css:31343558/1985

--- a/blocksi.html
+++ b/blocksi.html
@@ -24,7 +24,7 @@
     <h3>
         Enjoy!                                                                     
     </h3>
-    <table class="sphero">
+    <table>
       <tr>
         <td>
           <button class="btn" onclick="window.location.href='The Sphero EDU Way.html'">The Sphero EDU Way(Most Popular)</button>
