--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
       <a href="Informational Websites.html">Learn more about...</a>
+      <a href="Unblocked Games.html">Unblocked Games</a>
     </div>
   </body>
 </html>
