--- a/shortcuts.html
+++ b/shortcuts.html
@@ -50,7 +50,7 @@
     </div>
     <div id="chromeParagraph">
       
-      <h3>Disclaimer: You may need to use the U.S. International keyboard for some of the shortcuts</h3>
+      <h3>Disclaimer: You may need to use the U.S. International keyboard for all of the shortcuts needing the alt key</h3>
       <h2>Simple Text Shortcuts</h2>
       <table>
         <tr>
