--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     Turk and Yamz
   </h1>
   <body>
+    <p>
+      Welcome! Choose something down below to get started!
+    </p>
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
