🖖🎩 Checkpoint ./Unblocked Games.html:31343558/56

--- a/Unblocked Games.html
+++ b/Unblocked Games.html
@@ -31,7 +31,7 @@
     </button>
     
     <div id="slopeGame">
-      <iframe src="https://sloped.glitch.me/"></iframe>
+      <iframe src="https://ugiytdrcvgbh.glitch.me/"></iframe>
     </div>
   
     
