🍥💠 Checkpoint ./shortcuts.html:11068696/335:31343558/424 ./index.html:31343558/75

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -115,23 +115,23 @@
         </tr>
         <tr>
           <td>Acute A (á)</td>
-          <td>alt + a</td>
+          <td>right alt key + a</td>
         </tr>
         <tr>
           <td>Acute E (é)</td>
-          <td>alt + e</td>
+          <td>right alt key + e</td>
         </tr>
         <tr>
           <td>Acute I (í)</td>
-          <td>alt + i</td>
+          <td>right alt key + i</td>
         </tr>
         <tr>
           <td>Acute O (ó)</td>
-          <td>alt + o</td>
+          <td>right alt key + o</td>
         </tr>
         <tr>
           <td>Acute U (ú)</td>
-          <td>alt + u</td>
+          <td>right alt key + u</td>
         </tr>
       </table>
       
@@ -143,19 +143,19 @@
         </tr>
         <tr>
           <td>The Euro (€)</td>
-          <td>alt</td>
+          <td>right alt key + 5</td>
         </tr>
         <tr>
           <td>Japanese Yen (¥)</td>
-          <td>alt + shift + u a</td>
+          <td>right alt key + _ </td>
         </tr>
         <tr>
           <td>English Pound (£)</td>
-          <td>alt + shift + 4</td>
+          <td>right alt key + shift + 4</td> 
         </tr>
         <tr>
           <td>American Cent (¢)</td>
-          <td>alt + shift + c</td>
+          <td>right alt key + shift + c</td>
         </tr>
       </table>
       
