✂️🛋 Checkpoint ./shortcuts.html:11068696/269 ./Unblocked Games.html:11068696/508:31343558/1557 ./Unblocked Games.css:11068696/169:31343558/30

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -91,19 +91,23 @@
         </tr>
         <tr>
           <td>Multiplication Symbol (×)</td>
-          <td>alt + =</td>
+          <td>right alt key + =</td>
         </tr>
         <tr>
           <td>Division Symbol (÷)</td>
-          <td>alt + shift + =</td>
+          <td>right alt key + shift + =</td>
         </tr>
         <tr>
           <td>1/4 Fraction (¼)</td>
-          <td>alt + 6</td>
+          <td>right alt key + 6</td>
         </tr>
         <tr>
           <td>1/2 Fraction (½)</td>
-          <td>alt + 7</td>
+          <td>right alt key + 7</td>
+        </tr>
+        <tr>
+          <td>3/4 Fraction (¾)</td>
+          <td>right alt key + 8</td>
         </tr>
       </table>
       
