❄️📕 Checkpoint ./Unblocked Games.html:31343558/28

--- a/Unblocked Games.html
+++ b/Unblocked Games.html
@@ -50,11 +50,11 @@
 
     <div id="slopeGame">
       <span onclick="slopeGame()">fullscreen</span>
-      <iframe id="game" src="https://ugiytdrcvgbh.glitch.me/"></iframe>
+      <iframe id="slopeGame1" src="https://ugiytdrcvgbh.glitch.me/"></iframe>
     </div>
     <div id="soccerPhysicsGame">
       <span onclick="soccerPhysicsGame()">fullscreen</span>
-      <iframe id="game" src="https://soccer--physics.glitch.me/"></iframe>
+      <iframe id="soccerPhysicsGame1" src="https://soccer--physics.glitch.me/"></iframe>
     </div>
   <body>
     <script>
@@ -111,10 +111,10 @@
         improvements.style.display = "none";
       }
       function slopeGame() {
-        document.getElementById("slopeGame").requestFullscreen();
+        document.getElementById("slopeGame1").requestFullscreen();
       }
       function soccerPhysicsGame() {
-        document.getElementById("soccerPhysicsGame").requestFullscreen();
+        document.getElementById("soccerPhysicsGame1").requestFullscreen();
       }
     </script>
   </body>
