👩🏘 Checkpoint ./Unblocked Games.html:11068696/860:31343558/32 ./Unblocked Games.css:11068696/23:31343558/51

--- a/Unblocked Games.html
+++ b/Unblocked Games.html
@@ -29,7 +29,7 @@
     </button>
 
     <button onclick="soccerPhysicsFunction()" id="soccerPhysicsButton" id="button">
-      soccerPhysics
+      Soccer Physics
     </button>
 
     <button
@@ -54,7 +54,7 @@
     </div>
     <div id="soccerPhysicsGame">
       <span onclick="soccerPhysicsGame()">fullscreen</span>
-      <iframe id="soccerPhysicsGame1" src="https://soccer-physics.glitch.me/"></iframe>
+      <iframe id="soccerPhysicsGame1" src="https://soccer--physics.glitch.me/"></iframe>
     </div>
   <body>
     <script>
