🎆📙 Checkpoint ./shortcuts.html:11068696/106

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -188,6 +188,10 @@
           <td>Redo</td>
           <td>ctrl + y</td>
         </tr>
+        <tr>
+          <td>Outcome</td>
+          <td>Keyboard</td>
+        </tr>
       </table>
         
     </div>
