💖🌑 Checkpoint ./shortcuts.html:11068696/652 ./.glitch-assets:11068696/352

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -118,6 +118,10 @@
           <th>Keyboard</th>
         </tr>
         <tr>
+          <td>Unicodes</td>
+          <td>Ctrl + Shift + u</td>
+        </tr>
+        <tr>
           <td>Acute A (á)</td>
           <td>right alt key + a</td>
         </tr>
@@ -189,8 +193,8 @@
           <td>ctrl + y</td>
         </tr>
         <tr>
-          <td>Outcome</td>
-          <td>Keyboard</td>
+          <td>Lock Your PC</td>
+          <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d/shesh.jpg?v=1639529646575"> + L</td>
         </tr>
       </table>
         
