👦⛴ Checkpoint ./Unblocked Games.html:31343558/92

--- a/Unblocked Games.html
+++ b/Unblocked Games.html
@@ -32,20 +32,13 @@
       Soccer Physics
     </button>
 
-    <button
-      onclick="alternativesFunction()"
-      id="alternativesButton"
-      id="button"
-    >
-      Alternatives
-    </button>
+    <button onclick="alternativesFunction()" id="alternativesButton" id="button">Co</button>
 
     <button
       onclick="improvementsFunction()"
       id="improvementsButton"
       id="button"
-    >
-      Improvements
+    > Coming Soon
     </button>
 
     <div id="slopeGame">
