🏠🍠 Checkpoint ./Unblocked Games.html:31343558/105 ./Unblocked Games.css:11068696/42:31343558/192 ./index.html:11068696/63

--- a/Unblocked Games.html
+++ b/Unblocked Games.html
@@ -32,14 +32,10 @@
       Soccer Physics
     </button>
 
-    <button onclick="alternativesFunction()" id="alternativesButton" id="button">Co</button>
+    <button onclick="alternativesFunction()" id="alternativesButton" id="button">Coming Soon</button>
 
     <button
-      onclick="improvementsFunction()"
-      id="improvementsButton"
-      id="button"
-    > Coming Soon
-    </button>
+      onclick="improvementsFunction()"id="improvementsButton" id="button">Coming Soon</button>
 
     <div id="slopeGame">
       <span onclick="slopeGame()">fullscreen</span>
