--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="blocksi.html">Getting Past Blocksi</a>
       <a href="Informational Websites.html">Learn more about...</a>
       <a href="Unblocked Games.html">Unblocked Games</a>
+      <a href="dicord.gg">Join Our Discord</a>
     </div>
   </body>
 </html>
