🐀👟 Checkpoint ./index.html:11068696/36

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="blocksi.html">Getting Past Blocksi</a>
       <a href="Informational Websites.html">Learn more about...</a>
       <a href="Unblocked Games.html">Unblocked Games</a>
-      <a href="dicord.gg">Join Our Discord</a>
+      <a href="https://discord.gg/SB3fBtX7">Join Our Discord</a>
     </div>
   </body>
 </html>
