🐜👷 Checkpoint ./index.html:11068696/43:31343558/52 ./discord.css:11068696/4939 ./discord.html:11068696/1105:31343558/167 ./blocksi.html:31343558/3 ./informationalWebsites.html:31343558/3 ./unblockedGames.html:31343558/9 ./unblockedGames.css:31343558/7

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
-      <a href="Informational Websites.html">Learn more about...</a>
-      <a href="Unblocked Games.html">Unblocked Games</a>
-      <a href="https://discord.gg/SB3fBtX7">Join Our Discord</a>
+      <a href="informationalWebsites.html">Learn more about...</a>
+      <a href="unblockedGames.html">Unblocked Games</a>
+      <a href="discord.html">Our Discord</a> 
     </div>
   </body>
 </html>
