--- a/informationalWebsites.html
+++ b/informationalWebsites.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
     <title>Turk and Yamz | Informational Websites</title>
-    <link rel="stylesheet" href="Informational Websites.css">
+    <link rel="stylesheet" href="informationalWebsites.css">
   
 </head>
 <body>
